<resources>
    <string name="app_name">FaceTag</string>
    <string name="app_logo">TAG\nABOUT\nME</string>

    <!-- 메인 화면 -->
    <!-- 로그인 -->
    <string name="main_email">이메일</string>
    <string name="main_password">비밀번호</string>
    <string name="main_login">로그인</string>
    <string name="main_login_fail">로그인에 실패하였습니다.</string>
    <!-- 회원가입 -->
    <string name="main_register">회원가입 &amp; 로그인</string>
    <string name="main_register_complete">회원가입이 완료되었습니다.</string>
    <string name="main_user_collision">이미 존재하는 사용자 입니다.</string>
    <string name="main_invalid_email">이메일이 잘못된 형식입니다.</string>
    <string name="main_empty_email">이메일을 입력하세요.</string>
    <string name="main_empty_password">비밀번호를 입력하세요.</string>
    <string name="main_invalid_password">비밀번호는 6자리 이상입니다.</string>

    <!-- 성별 선택 화면 -->
    <string name="sex_male">남자</string>
    <string name="sex_female">여자</string>
    <string name="sex_select">당신의 성별을 선택해주세요.</string>
    <!-- DB -->
    <string name="sex_field_sex">sex</string>
    <string name="sex_field_male">m</string>
    <string name="sex_field_female">f</string>
    <string name="sex_invalid_input">뭔가 잘못되었습니다.</string>
    <string name="sex_collection_user">User</string>

    <!-- 분석시작 화면 -->
    <string name="intro_message1">당신을 분석해드립니다</string>
    <string name="intro_message2">이제까지 진부한 미팅 어플에 질리셨나요?</string>
    <string name="intro_message3">저희는 최첨단 기술을 사용하여 매칭을 이루어 드립니다.</string>
    <string name="intro_analyze">분석하기</string>
    <string name="intro_fd">Face Detection</string>
    <string name="intro_il">Image Labeling</string>
    <string name="intro_fd_message1">당신의 셀카를 이용해서 행복지수를 측정해보세요.</string>
    <string name="intro_fd_message2">인공지능이 당신의 얼굴 표정을 분석해줍니다.</string>
    <string name="intro_il_message1">사진첩을 통해서 당신의 일상을 분석해보세요.</string>
    <string name="intro_il_message2">인공지능을 통해 관심사를 파악해드립니다.</string>
    <string name="intro_permission_message">사진을 찍으려면 권한이 필요합니다.</string>

    <!-- 분석진행 화면 -->
    <string name="analyze_message">분석중입니다...</string>
</resources>
