<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".IntroActivity">

    <FrameLayout
        android:id="@+id/intro_photo_framelayout"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/white_circle"/>

        <ImageView
            android:id="@+id/intro_default_imv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/camera"
            android:layout_gravity="center"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/intro_profile_imv"
            android:layout_width="96dp"
            android:layout_height="96dp"/>

    </FrameLayout>




    <LinearLayout
        android:id="@+id/intro_description_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/intro_photo_framelayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.08">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_message1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_message2"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_message3"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/intro_analyze_button"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_box"
        android:text="@string/intro_analyze"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:fontFamily="@font/nanum_extrabold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_description_linearlayout" />


    <FrameLayout
        android:id="@+id/intro_fd_framelayout"
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_analyze_button">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/normal_box"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/intro_fd_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_fd"
                style="@style/intro_analyze_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.05"/>

            <TextView
                android:id="@+id/intro_fd_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_fd_message1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intro_fd_tv1"/>
            <TextView
                android:id="@+id/intro_fd_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_fd_message2"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intro_fd_tv2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/intro_fd_tv3">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/face_purple"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/face_orange"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/face_red"/>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_fd_framelayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/normal_box"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/intro_il_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_il"
                style="@style/intro_analyze_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.05"/>

            <TextView
                android:id="@+id/intro_il_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_il_message1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intro_il_tv1"/>
            <TextView
                android:id="@+id/intro_il_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_il_message2"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intro_il_tv2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/intro_il_tv3">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/labeling"/>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>



</android.support.constraint.ConstraintLayout>