<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".SexActivity">

    <FrameLayout
        android:id="@+id/sex_imageview_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/white_circle"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo" />
    </FrameLayout>

    <TextView
        android:id="@+id/sex_textview_select"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sex_select"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sex_imageview_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.13"/>

    <FrameLayout
        android:id="@+id/sex_male"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sex_textview_select"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.3">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:src="@drawable/normal_box"/>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/male"/>
        <TextView
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/sex_male"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/sex_text_box"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sex_female"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sex_textview_select"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.3">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:src="@drawable/normal_box"/>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/female"/>
        <TextView
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/sex_female"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/sex_text_box"/>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/sex_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.93"/>

</android.support.constraint.ConstraintLayout>